see that file and the CVS log for more historic information.  The
entire history of the project is available through CVS.

----------------------------------------------------------------------
--- 2006-07-XX  Release 7.8.3                                      ---
----------------------------------------------------------------------

* new script for computing BRL-CAD file line counts - Sean Morrison
* fixed mged extrude of empty sketch display crash - Sean Morrison
* re-enabled png-ipu, pix-ipu, ipustat, ipuscan - Sean Morrison
* updated archer splash screen - Bob Parker
* archer enhancements for displaying view parameters - Bob Parker
* improved mged grid zooming using pixel size - John Anderson
* fixed mged hang caused by extreme grid zooming bug - John Anderson
* ported jove to SGI Altix platform, fixed crash bug - Sean Morrison
* increase default mged scrollback to 10k lines - Sean Morrison
* improved support for Mac "delete" keys in mged - Sean Morrison
* mged vi-mode command edit history searching - James (swcto)
* bigger, better vi command line editing in mged - James (swcto)
* rt command script 'ae' no longer resets view scale - Sean Morrison
* fixed asc-nmg manual page usage examples - Sean Morrison


----------------------------------------------------------------------
--- 2006-06-20  Release 7.8.2                                      ---
----------------------------------------------------------------------

This release includes a new example geometry model, a "Toy Barbie
Jeep" (see note below regarding trademarks) that was modeled in 2005
over the course of a day by a small group of students attending a free
hands-on BRL-CAD training class at SURVICE Engineering, Inc.  The
class involved working in groups to simulate a real-world
time-constrained modeling experience taking measurements of a real toy
vehicle, considering what aspects of the vehicle are important for
analytic purposes, deciding how to best represent complex geometric